--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
+<!DOCTYPE html>
 <html> 
-    <body>
-        <h1>HOLI</h1>
-    </body>
+<head>
+    <title>HOLIS BOLIS</title>
+    <link rel="stylesheet" href="./ESTILOS.CSS">
+</head>
+<body>
+<h1>HOLI1</h1>
+<h2>HOLI2</h2>
+<h3>HOLI3</h3>
+<h4>HOLI4</h4>
+</body>
 </html>
