--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
-<html> 
-<head>
-    <title>HOLIS BOLIS</title>
-    <link rel="stylesheet" href="./ESTILOS.CSS">
-</head>
-<body>
-<h1>HOLI1</h1>
-<h2>HOLI2</h2>
-<h3>HOLI3</h3>
-<h4>HOLI4</h4>
-</body>
+<html>
+    <head>
+        <title>ALEJANDRA BROUSSET</title>
+        <meta charset="UTF-8">
+        <body style="background-color: rgb(250, 250, 246);"></body>
+    </head>
+    <body>
+        <header>
+            <h1 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: rgb(173, 197, 193); font-weight: bold ; text-align: center;">Alejandra Brousset</h1>
+        </header>
+        <p style="background-color: rgb(96, 110, 114); padding-right: 50px; display:flex; color: rgb(241, 236, 229); font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+            <img height="20%" width="20%" src="./IMG/Ale.jpg"> 
+            <br></br>
+            Sobre Mi:
+            <br></br>
+                Soy Alejandra Brousset, me considero una persona decidida, honesta y que asume riesgos. Actualmente me encuentro cursando el octavo ciclo de la carrera de Dirección y Diseño Publicitario en Toulouse Lautrec. Cuando se me asigna un proyecto, me gusta dar el 100% de mi en cada cosa que realizo.
+        </p>
+        
+        <p style="background-color: rgb(205, 207, 194); padding-right: 50px; display:flex; color: rgb(57, 57, 56); font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+            <img height="20%" width="20%" src="./IMG/Diseño web.jpg"> 
+            Sobre Mi Carrera:
+            <br></br>
+            Estudio la carrera de Dirreción y Diseño Publicitario, me encuentro llevando los ultimos 3 cursos de mi malla curricular. Luego de terminar planeo realizar el bachiller para posteriormente hacer el proceso de titulación. Quiero especializarme en lo que es branding e identidad de marca y en el diseño web y movil.
+            <br></br>
+            Proyecto: 
+            <br></br>
+            1.Ventilador automático que funcione en base a cuanto calor hace en un ambiente.
+            <br></br>
+            2.Ventilador que funcione sin electricidad ya que el calor seria su fuente de energía.
+            </br>
+        </p>
+
+        <p style="background-color: rgb(228, 189, 155); padding-right: 50px; display:flex; color: rgb(241, 236, 229); font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+            <img height="20%" width="20%" src="./IMG/Dibujo.jpg"> 
+            <br></br>
+            Sobre Mi Dibujo:
+            <br></br>
+            <br> 
+            La idea del dibujo es plasmar los gustos de cada uno dentro de un foco, el foco representa que somos personas creativas y con ideas innovadoras es por eso que nuestros gustos están dentro, el foco sale de una nube ya que no hay límite para la creatividad.
+        </br>
+        </p>
+    </body>
 </html>
