--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </p>
         
         <p style="background-color: rgb(205, 207, 194); padding-right: 50px; display:flex; color: rgb(57, 57, 56); font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
-            <img height="20%" width="20%" src="./IMG/Diseño web.jpg"> 
+            <img height="20%" width="20%" src="./IMG/web.jpg"> 
             Sobre Mi Carrera:
             <br></br>
             Estudio la carrera de Dirreción y Diseño Publicitario, me encuentro llevando los ultimos 3 cursos de mi malla curricular. Luego de terminar planeo realizar el bachiller para posteriormente hacer el proceso de titulación. Quiero especializarme en lo que es branding e identidad de marca y en el diseño web y movil.
